chrome fixes: custom scrollbar, view width overflow

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -36,7 +36,7 @@
       position: relative;
       display: flex;
       justify-content: center;
-      width: 100vw;
+      width: 99vw;
       height: 200px;
       overflow: hidden;
 
